<resources>
    <string name="app_name">HomeWork</string>
    <string name="button">Button</string>
    <string name="text1">First text</string>
    <string name="text2">Next text</string>
    <string name="dz1">DZ1</string>
    <string name="dz2">DZ2</string>
    <string name="dz3">DZ3</string>
    <string name="dz4">DZ4</string>
    <string name="dz4_2">DZ4_2</string>
    <string name="dz5">DZ5</string>
    <string name="dz6">DZ6</string>
    <string name="dz7">DZ7</string>
    <string name="dz8">DZ8</string>
    <string name="poland">Польша</string>
    <string name="austria">Австрия</string>
    <string name="columb">Колумбия</string>
    <string name="tailand">Таиланд</string>
    <string name="italy">Италия</string>
    <string name="mada">Мадагаскар</string>
    <string name="danyi">Дания</string>
    <string name="iemen">Йемен</string>
    <string name="url">http://goo.gl/bGtMDC</string>
    <string name="showImg">Отобразить картинку</string>
    <string name="addStu">Add a new student</string>
    <string name="type_url_image">Type URL image</string>
    <string name="vasya">Vasya</string>
    <string name="type_name_student">Type name student</string>
    <string name="diagrame">Диаграмма</string>
</resources>
